--- a/react-rails-tutorial/Gemfile
+++ b/react-rails-tutorial/Gemfile
@@ -24,7 +24,7 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 
 
-gem 'react-rails', github: 'reactjs/react-rails', branch: 'master'
+gem 'react-rails', github: 'reactjs/react-rails'
 gem 'showdown-rails'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
